--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
-    "vercel-build": "prisma generate && next build"
+   "vercel-build": "prisma generate && next build --no-lint"
   },
   "dependencies": {
     "@prisma/client": "^6.16.2",
